Fix well spacing (bottom margin)

--- a/resources/public/css/custom.pretty.css
+++ b/resources/public/css/custom.pretty.css
@@ -2474,6 +2474,10 @@ table .span24 {
     box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
 }
 
+div.well {
+    margin-bottom: 10px;
+}
+
 #job-list.well {
     margin: 0 -10px;
 }
